methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:73: error: not found: value avacne
  avacne()
  ^